--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,35 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@variant dark (&:where(.dark, .dark *));
 
-@theme inline {
+@theme {
+  --color-text: var(--text);
+
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+  --color-primary: var(--primary);
+
+  --color-secondary: var(--secondary);
+
+  --color-accent: var(--accent);
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --text: #2e1305;
+    --background: #fef8f6;
+    --primary: #813d1d;
+    --secondary: #e5ea62;
+    --accent: #a3d71d;
+  }
+  .dark {
+    --text: #fadfd1;
+    --background: #090301;
+    --primary: #e29e7e;
+    --secondary: #999d15;
+    --accent: #ade228;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+
